[gd_scene load_steps=8 format=3 uid="uid://bb4hpvw0tq6yt"]

[ext_resource type="Script" path="res://script_editor.gd" id="2"]
[ext_resource type="Script" path="res://run_button.gd" id="3"]
[ext_resource type="Theme" uid="uid://bwuol0nxm8rsj" path="res://resources/theme.tres" id="4"]
[ext_resource type="FontFile" uid="uid://decvm47txmafw" path="res://fonts/noto_sans_regular.ttf" id="4_5pn77"]
[ext_resource type="Script" path="res://main_window.gd" id="5"]

[sub_resource type="CodeHighlighter" id="CodeHighlighter_wdykl"]
number_color = Color(1, 0.666667, 0.137255, 1)
symbol_color = Color(1, 1, 1, 1)
function_color = Color(0.27451, 0.47451, 0.65098, 1)

[sub_resource type="CodeHighlighter" id="CodeHighlighter_r1olw"]
number_color = Color(1, 0.666667, 0.137255, 1)
symbol_color = Color(1, 1, 1, 1)
function_color = Color(0.27451, 0.47451, 0.65098, 1)

[node name="MainWindow" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("4")
script = ExtResource("5")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 640

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
offset_right = 656.0
offset_bottom = 600.0

[node name="ScriptEditor" type="TextEdit" parent="HSplitContainer/VBoxContainer"]
offset_right = 656.0
offset_bottom = 600.0
size_flags_vertical = 3
theme = ExtResource("4")
text = "extends Node

func _ready():
	pass"
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_wdykl")
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource("2")

[node name="RunButton" type="Button" parent="HSplitContainer/VBoxContainer/ScriptEditor"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_bottom = 33.0
grow_horizontal = 0
hint_tooltip = "Shortcut: Ctrl + Enter"
theme_override_fonts/font = ExtResource("4_5pn77")
text = "Run"
script = ExtResource("3")
metadata/_edit_layout_mode = 1

[node name="TranspileButton" type="Button" parent="HSplitContainer/VBoxContainer/ScriptEditor"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 39.0
offset_bottom = 72.0
grow_horizontal = 0
hint_tooltip = "Shortcut: Ctrl + Enter"
theme_override_fonts/font = ExtResource("4_5pn77")
text = "Transpile"
script = ExtResource("3")
metadata/_edit_layout_mode = 1

[node name="ok" type="HSplitContainer" parent="HSplitContainer"]
offset_left = 668.0
offset_right = 1024.0
offset_bottom = 600.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HSplitContainer/ok"]
offset_right = 16.0
offset_bottom = 600.0

[node name="ScriptEditor" type="TextEdit" parent="HSplitContainer/ok/VBoxContainer2"]
offset_right = 16.0
offset_bottom = 600.0
size_flags_vertical = 3
theme = ExtResource("4")
text = "extends Node

func _ready():
       print(\"Hello world!\")
"
editable = false
highlight_all_occurrences = true
highlight_current_line = true
draw_tabs = true
syntax_highlighter = SubResource("CodeHighlighter_r1olw")
caret_blink = true
caret_blink_speed = 0.5
script = ExtResource("2")

[node name="OutputPanel" type="PanelContainer" parent="HSplitContainer/ok"]
offset_left = 28.0
offset_right = 356.0
offset_bottom = 600.0

[node name="ErrorLabel" type="Label" parent="HSplitContainer/ok/OutputPanel"]
offset_left = 8.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 26.0
size_flags_vertical = 0

[node name="RichTextLabel" type="RichTextLabel" parent="HSplitContainer/ok/OutputPanel"]
offset_left = 8.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 592.0
focus_mode = 2
scroll_following = true
selection_enabled = true

[node name="EngineVersion" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.501961)
anchor_left = 1.0
anchor_right = 1.0
offset_left = -132.0
offset_top = 9.0
offset_right = -15.0
offset_bottom = 46.0
grow_horizontal = 0
metadata/_edit_layout_mode = 1

[connection signal="pressed" from="HSplitContainer/VBoxContainer/ScriptEditor/RunButton" to="HSplitContainer/VBoxContainer/ScriptEditor" method="_run_button_pressed"]
[connection signal="pressed" from="HSplitContainer/VBoxContainer/ScriptEditor/TranspileButton" to="HSplitContainer/VBoxContainer/ScriptEditor" method="_on_transpile_button_pressed"]
